fix cards on mobile overflow add touch-swipe jquery plugin for video player

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,3 +1,7 @@
 body {
   background-color: #333;
 }
+
+.card {
+  overflow: hidden;
+}
